# Pico_Pmod

./: .gitignore  LICENSE_hardware.md  LICENSE_software.md  README.md
.github/workflows/: Pico_Pmod_kicad.yml  RP2040_Mini_PMod_Kicad.yml  RP2040_PMod_kicad.yml  client_kicad.yml  custom_kicad.yml  host_kicad.yml
Hardware/: kibot.yaml  kibot.yml  pico_pmod-cache.lib  pico_pmod.kicad_pcb  pico_pmod.pro  pico_pmod.sch
Hardware/Client/: pico_pmod.kicad_pcb
Hardware/Custom/: pico_pmod-cache.lib  pico_pmod.kicad_pcb  pico_pmod.pro  pico_pmod.sch
Hardware/Host/: pico_pmod_host.kicad_pcb  pico_pmod_host.sch
Hardware/Pico_PMod/: pico_pmod_host.kicad_pcb  pico_pmod_host.kicad_pro  pico_pmod_host.kicad_sch  pico_pmod_host.sch
Hardware/RP2040_Mini_PMod/: RP2040_Mini_PMod.FCStd  RP2040_Mini_PMod.kicad_pcb  RP2040_Mini_PMod.kicad_pro  RP2040_Mini_PMod.kicad_sch
Hardware/RP2040_PMod/: pico_pmod-cache.lib  pico_pmod.kicad_pcb  pico_pmod.kicad_pro  pico_pmod.kicad_sch  pico_pmod.pro  pico_pmod.sch  simple_mount.scad
Software/: main.c
Software/Buttons/: CMakeLists.txt  main.c
Software/Counter/: main.c
